[tool.poetry]
name = "tor-scraping-test"
version = "0.1.0"
description = ""
authors = ["Henry Post <HenryFBP@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = {extras = ["socks"], version = "*"}
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
