[tool.poetry]
name = "tor-scraping-test"
version = "0.1.0"
description = ""
authors = ["Henry Post <HenryFBP@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = {extras = ["socks"], version = "^2.32.3"}
beautifulsoup4 = "^4.12.3"
pymongo = "^4.8.0"
dnspython = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
